[package]
name = "dyhra"
version = "0.0.1"
edition = "2021"
license = "GPL3"
authors = ["wick3dr0se <wick3dr0se@protonmail.com>"]
repository = "https://github.com/wick3dr0se/dyhra"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
bincode = "1.3.3"
macroquad = { git = "https://github.com/not-fl3/macroquad" }
macroquad-particles = { git = "https://github.com/not-fl3/macroquad" }
macroquad-tiled = { git = "https://github.com/not-fl3/macroquad" }
renet = "0.0.16"
serde = { version = "1.0.204", features = ["derive"] }
thunderdome = "0.6.1"
#egui = "0.27.2"
#egui-wgpu = { version = "0.27.2", features = ["winit"] }
#egui-winit = "0.27.2"
#wgpu = "0.20.1"
#winit = "0.30.2"

[profile.release]
strip = true
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
